--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "require": {
-        "prodigyview/prodigyview": "^0.9.97"
-    }
+  "require": {
+    "aeberdinelli/express-php": "v1.1.0"
+  }
 }
