--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,7 @@ ports:
 
 tasks:
   - init: composer update
-    command: php -S 0.0.0.0:8000 -t public/
+    command: php -S 0.0.0.0:8000 -t app/
 
 vscode:
   extensions:
