--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -27,7 +27,7 @@ jobs:
         run: |-
           gcloud run deploy "$SERVICE_NAME" \
             --quiet \
-            --port 80
+            --port 80 \
             --region "$RUN_REGION" \
             --image "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA" \
             --platform "managed" \
