--- a/docker/php.ini
+++ b/docker/php.ini
@@ -944,6 +944,7 @@ default_socket_timeout = 60
 ;extension=pdo_sqlite
 ;extension=pgsql
 ;extension=shmop
+extension=grpc.so
 
 ; The MIBS data available in the PHP distribution must be installed.
 ; See https://www.php.net/manual/en/snmp.installation.php
